@@ -1556,7 +1556,23 @@ multibuild-netbsd-i386: \
   build-porting32-gcc-debug_ari_asm
 
 # NetBSD/sparc
-multibuild-netbsd-sparc: multibuild-porting32-gcc # TODO
+multibuild-netbsd-sparc: \
+  build-porting32-gcc-portability \
+  build-porting32-gcc-safety3 \
+  build-porting32-gcc-heapcodes \
+  build-porting32-gcc-one_free_bit_heapcodes-malloc \
+  build-porting32-gcc-one_free_bit_heapcodes-trivialmap \
+  build-porting32-gcc-heapcodes-spvw_pages \
+  build-porting32-gcc-heapcodes-spvw_mixed_blocks \
+  build-porting32-gcc-typecodes-spvw_mixed_blocks-trivialmap \
+  build-porting32-gcc-wide \
+  build-porting32-gcc-limited_memory \
+  build-porting32-gcc-old_gc \
+  build-porting32-gcc-multithread_gc \
+  build-porting32-gcc-safety0 \
+  build-porting32-gcc-safety0-optimized \
+  build-porting32-gcc-debug_gcsafety \
+  build-porting32-gcc-debug_ari_asm
 
 # OpenBSD/i386
 # Note: build-porting32-gcc-debug_gcsafety has compilation failures on some
