@@ -1,5 +1,13 @@
 2018-01-20  Bruno Haible  <bruno@clisp.org>
 
+	Enable most optimizations on NetBSD/sparc.
+	* Makefile.devel (multibuild-netbsd-sparc): Enable all build variants
+	that work.
+	* makemake.in (XCFLAGS): For NetBSD/sparc, enable all optimizations
+	except ASM.
+
+2018-01-20  Bruno Haible  <bruno@clisp.org>
+
 	Enable most optimizations on DragonFly/i386.
 	None of the builds actually works for me: the kernel panics too often.
 	* Makefile.devel (multibuild-dragonfly-i386): Enable all build variants
